# opengl-haskell

./: License  build.sh  gl.cabal  main  project.cabal
c-src/: build.sh  gl.f.glsl  gl.v.glsl  main  main.c
example-app/GLTest.app/Contents/: Info.plist
example-app/GLTest.app/Contents/MacOS/: boot.sh  libSystem.B.dylib  libglfw.dylib
example-app/GLTest.app/Contents/Resources/: icons.icns
example-app/GLTest.app/Contents/Resources/shaders/: perspective-2.v.glsl  perspective.v.glsl  sphere.f.glsl  sphere.v.glsl
shaders/: bezier.f.glsl  bezier.v.glsl  blocks.f.glsl  blocks.v.glsl  circle.f.glsl  circle.v.glsl  gl.f.glsl  gl.v.glsl  ortho.v.glsl  perspective-2.v.glsl  perspective.v.glsl  render.f.glsl  render.v.glsl  sphere.f.glsl  sphere.v.glsl
src/: Attribute.hs  Bezier.hs  Blocks.hs  Circle.hs  Cube.hs  Draw.hs  Element.hs  FrameBuffer.hs  Image.hs  Input.hs  Job.hs  Main.hs  RenderBuffer.hs  Renderable.hs  Resources.hs  Shader.hs  Sphere.hs  Texture.hs  Uniform.hs  Utilities.hs  Version.hs  Window.hs  WindowFrame.hs  gl.f.glsl  gl.v.glsl
