name:                gl
version:             0.1.0.0
license:             MIT
license-file:        License
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable gl
  ghc-options:         -threaded -W -fno-warn-unused-binds
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base    ==4.5.1.0,
                       text    ==0.11.2.3,
                       safe    ==0.3.3,
                       GLUT    ==2.3.1.0,
                       OpenGL  ==2.6.0.1,
                       stm     ==2.4,
                       netwire ==4.0.7,
                       mtl     ==2.1.2
