name:                gl
version:             0.1.0.0
license:             MIT
license-file:        License
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable gl
  ghc-options:         -threaded -W -fno-warn-unused-binds
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base      ==4.5.1.0,
                       GLFW-b    ==0.1.0.5,
                       OpenGLRaw ==1.3.0.0,
                       stm       ==2.4
